Version 2.1.1.6
=================

Added a dummy IAsyncReader Interface to allow the MS Demux to parse the data in the file when the Demux control option is inactive.(Program Pin Mode Only)
Added some changes to the PidParser code to allow for other country TS standards.(France)
Changed the media subtype for H264 video mediatype so it wll play H264 streams.(France)



Version 2.1.1.5
=================
Fixed a problem where the IMPEG2StreamIdMap pids were not being cleared when changing streams.(re mpg files)
Fixed the AC3 Audio playback issue with mpg files. Had to add the stream offset values.

Version 2.1.1.4
=================
Made some changes to the main destructor method so that all class destructors were used.
Made some changes to the Breakconnect functon so that the pin could be reconnected to the Demux's.
Added some helper code to delete any Demux output pins if the TSfileSource filter was disconnected.
Fixed a bug in the GetDuration code that was causing issues with getting the pcr.
Added some simple code to allow the filter to operate as a push source for mpg files, It changes the output pin to MPEG2 Program mode and controls the MS Demux using the IMPEG2StreamIdMap Interface.  
(Note: Does not seem to work well with AC3 streams but plays MPEG2 audio ok.)

Version 2.1.1.3
=================
Changed the Pin name of the audio pin for AAC media types from "AAC" to "Audio" so Applications can still look for the audio label. 
Fixed a bug that was holding up the filtergraph when it was destroyed from a active filter state.RE CAMThread.

Version 2.1.1.2
=================
Add a fix to the Pause function to allow it to work if called from a stopped condition.
Fixed a few more bugs. 


Version 2.1.1.1
=================
Added a option on the property page to enable the Teletext pin.(Should solve any rendering Problems and make it quicker to load.)
Added ITSFileSource function support for the above option.

Version 2.1.1.0
=================